2004-01-03  Jim Evins  <evins@snaught.com>

	* pixmaps/ex-rect-size.png:
	* pixmaps/ex-round-size.png:
	* pixmaps/ex-cd-size.png:
	* pixmaps/Makefile.am:
		Added ex-rect-size.png, ex-round-size.png, and ex-cd-size.png image
		files to be used as illustrations/examples in the template-designer.

	* src/template-designer.c: (construct_rect_size_page),
	(construct_round_size_page), (construct_cd_size_page),
	(construct_nlayouts_page), (rect_size_page_prepare_cb),
	(round_size_page_prepare_cb), (cd_size_page_prepare_cb),
	(layout_page_prepare_cb), (build_template):
	* src/template-designer.glade:
		Added illustrations for rectangle, round, and cd label size pages.
		Added margin spinboxes to these pages, and now add a margin markup
		to the constructed template.  Added realistic default values for
		some of the size spinboxes.  Cleaned up the code for setting spinbox
		ranges on the layouts page.

2004-01-02  Jim Evins  <evins@snaught.com>

	* src/object-editor-size-page.c: (h_spin_cb):
		Fixed cut-n-paste error in h_spin_cb that loaded h from
		the wrong spinbutton.

	* src/object-editor.h:
	* src/object-editor.c: (gl_object_editor_class_init),
	(gl_object_editor_changed_cb), (gl_object_editor_size_changed_cb):
	* src/object-editor-private.h:
	* src/object-editor-size-page.c: (w_spin_cb), (h_spin_cb),
	(size_reset_cb):
		Added "size_changed" signal.
		
	* src/view-text.c: (construct_properties_editor),
	(update_object_from_editor_cb),
	(update_object_from_editor_size_cb):
		Track size changes from object editor separately from other
		properties.  This is so the default size (0,0) of a text
		object is not modified unintentionally.

2003-12-30  Wayne Schuller  <k_wayne@linuxpower.org>

	Added feature: line spacing - allows you to comfortably space a text box to
	fit a label perfectly.

	* data/glabels-2.0.dtd:
	* src/label-object.c: (gl_label_object_set_text_line_spacing),
	(gl_label_object_get_text_alignment),
	(gl_label_object_get_text_line_spacing):